test/functions/bradc/resolution/defaultIntSmallOrBig2.good
defaultIntSmallOrBig2.chpl:9: error: ambiguous call 'plus(127, 127)'
defaultIntSmallOrBig2.chpl:1: note: candidates are: plus(x: int(8), y: int(8))
defaultIntSmallOrBig2.chpl:5: note:                 plus(x: int(16), y: int(16))
